--- a/src/intro/index.css
+++ b/src/intro/index.css
@@ -18,7 +18,21 @@ body {
 	box-shadow: 0 0 5px 0#222;
 	border-radius: 8px;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	font-size: 50px;
+	font-size: 30px;
+	position: relative;
+}
+
+.card .like {
+	position: absolute;
+	font-size: 20px;
+	transform: rotate(-90deg);
+	top: 10px;
+	right: 10px;
+}
+.card h6 {
+	margin:0;
+	font-size: 12px;
 }
