--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -1,5 +1,5 @@
 .card {
-    border: 1px solid #ffe44d;
+    border: 1px solid var(--main-color);
     border-radius: 8px;
     padding: 8px;
     display: grid;
@@ -29,7 +29,8 @@
     height: 30px;
     padding: 8px 12px;
     font-weight: 700;
-    background-color: #ffe44d;
-    /* height: max-content; */
+    background-color: var(--main-color);
+    /* height: max-content
+    ; */
     align-self: flex-end;
 }
