--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -14,7 +14,8 @@ header {
 
 nav {
     display: flex;
-    gap: 30px;
+    gap: 20px;
+    align-items: center;
 }
 
 input {
@@ -23,5 +24,12 @@ input {
     border-radius: 20px;
     border: none;
     outline: none;
-    padding: 6px 12px;
+    padding: 8px 12px;
+}
+header .logo {
+    height: 40px;
+    display: flex;
+}
+.logo img {
+    height: 100%;
 }
