--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,42 +1,19 @@
 header {
     background-color: var(--main-color);
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 16px calc(50% - 500px);
+    padding: 16px 0;
 }
 
-@media (max-width: 1060px) {
-    header {
-        padding: 16px 5vw;
-    }
-}
-
-@media (max-width: 530px) {
-    header {
-        /* flex-direction: column; */
-        display:grid;
-        grid-template-areas: 'a c'
-                             'b b';
-                             /* width: 100%; */
-    }
-}
 
 nav {
     display: flex;
-    gap: 20px;
+    justify-content: center;
     align-items: center;
-}
-@media (max-width: 530px) {
-    nav {
-        grid-area: c;
-        max-width: 50vw;
-        justify-content: flex-start;
-    }
 }
 
 input {
-    width: 400px;
+    width: 100%;
     height: 30px;
     border-radius: 20px;
     border: none;
@@ -45,25 +22,15 @@ input {
 }
 @media (max-width: 530px) {
     input {
-        grid-area: b;
         width: 90vw;
     }
 }
 
 header .logo {
-    height: 40px;
     display: flex;
-    max-width: 50vw;
 }
-@media (max-width: 530px) {
+@media (max-width: 770px) {
     header .logo {
-        grid-area: a;
-        width: 50vw;
-        justify-content: space-around;
+        justify-content: center;
     }
-}
-
-.logo img {
-    height: 100%;
-    /* width: 100%; */
 }
